chore: adicionar scripts/ ao .gitignore
Scripts temporários devem ficar em cursor-multiagent-system/@temp/ e não no repositório do projeto

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ Thumbs.db
 # Documentação de rascunho (não versionar)
 Documentacao/
 
+# Scripts temporários (devem ficar em @temp dos agentes)
+scripts/
+
